assets/less/material.less
md-toast {
  z-index: 9999;
}

.materialize {
  .flex-display;
  .flex(1);

  &>ui-view {
    .flex(1);
    .flex-display;
    .flex-direction(column);
  }

  .page-heading {
    font-size: 27px;
  }

  .navbar-item {
    .flex-display;
    .flex-direction(row);
    .justify-content(flex-start);
    .align-items(center);
    outline: none;
  }

  md-sidenav.md-locked-open,
  md-sidenav.md-sidenav-left {
    width: 250px;
    min-width: 250px;
    max-width: 250px;
    z-index: 101;
  }
}

.md-button {
  min-width: 0;
  margin:0;
}

.navigation a {
  padding: 12px 24px !important;

  color: #3B3B3B !important;
  font-size: 15px !important;
  font-weight: bold;
  text-decoration: none;
  -webkit-font-smoothing: antialiased;

  &:hover {
    font-weight: bold;
    background-color: #F7F7F7;
  }

  span {
    font-size: 15px;
    margin-left: 8px !important;
  }
}

.margin {
  margin-left: -6px;
}

//Doing this because Material Design v0.10.0 makes somethings with an ng-click are force 'fixed' by something odd, causing them all to have an outline.
:focus {
  outline: none;
}

